{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "98518f36-c9ba-4779-9960-7c637a1a8d39",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "fa21d60d-8bb1-4261-815b-a37820167bf1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "5072b9b0-2595-4a08-aadd-c48d4d9d146c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMouseButton",
                    "type": "Button",
                    "id": "fb0dcd7b-534a-41ff-9223-6cc5fe9eede9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightMouseButton",
                    "type": "Button",
                    "id": "98654f46-b5c9-40bc-9022-c810026f29a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "b101ef9d-f1d0-45bc-af07-1b92d610276e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "2b16da8d-df39-4212-818e-1c2c727b36b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9eb68d8c-03a1-4326-bd2a-4d1e3f97ea6c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1369680b-8b02-451d-bed1-3d8ca4ce98eb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb5d203b-2de7-4b6a-9861-e3618dbc967f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "517f677c-91e6-47c7-8dd9-0bf7c2351c5d",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46137073-4671-4a5d-b865-485441443511",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3aeb62d1-3b68-4831-9a98-701824293570",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}